Fix home.js centering issues, all items properly aligned in center column, update Twitter cards for clarity and style. Ready to abstract spacing div's.

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -18,12 +18,23 @@ html {
   align-items: center;
 }
 
+#twitter-card-row {
+  justify-content: center;
+  align-items: center;
+}
+
 #spotlight {
   padding: 10px;
   background-color: #0da67b;
   border-radius: 10px;
   color: rgba(0, 0, 0, 0.87);
   text-align: center;
+}
+
+#spotlight-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #home-map {
